--- a/ch4-traffic-management/customers-dr.yaml
+++ b/ch4-traffic-management/customers-dr.yaml
@@ -1,5 +1,4 @@
-
-apiVersion: networking.istio.io/v1alpha3
+apiVersion: networking.istio.io/v1beta1
 kind: DestinationRule
 metadata:
   name: customers
