--- a/ch4-traffic-management/customers.yaml
+++ b/ch4-traffic-management/customers.yaml
@@ -64,7 +64,7 @@ spec:
       name: http
       targetPort: 3000
 ---
-apiVersion: networking.istio.io/v1alpha3
+apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
 metadata:
   name: customers
@@ -79,7 +79,7 @@ spec:
               number: 80
             subset: v1
 ---
-apiVersion: networking.istio.io/v1alpha3
+apiVersion: networking.istio.io/v1beta1
 kind: DestinationRule
 metadata:
   name: customers
