--- a/ch4-traffic-management/service-entry.yaml
+++ b/ch4-traffic-management/service-entry.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: networking.istio.io/v1alpha3
+apiVersion: networking.istio.io/v1beta1
 kind: ServiceEntry
 metadata:
   name: github-external
