--- a/ch5-security/customers-v1.yaml
+++ b/ch5-security/customers-v1.yaml
@@ -44,7 +44,7 @@ spec:
       name: http
       targetPort: 3000
 ---
-apiVersion: networking.istio.io/v1alpha3
+apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
 metadata:
   name: customers
