--- a/ch5-security/web-frontend.yaml
+++ b/ch5-security/web-frontend.yaml
@@ -45,7 +45,7 @@ spec:
       name: http
       targetPort: 8080
 ---
-apiVersion: networking.istio.io/v1alpha3
+apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
 metadata:
   name: web-frontend
