--- a/kiplongu-istio/customers-v1.yaml
+++ b/kiplongu-istio/customers-v1.yaml
@@ -1,3 +1,8 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: customers-v1
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -6,7 +11,7 @@ metadata:
     app: customers
     version: v1
 spec:
-  replicas: 3  # Increased for high availability
+  replicas: 1
   selector:
     matchLabels:
       app: customers
@@ -17,31 +22,13 @@ spec:
         app: customers
         version: v1
     spec:
+      serviceAccountName: customers-v1
       containers:
         - image: gcr.io/tetratelabs/customers:1.0.0
           imagePullPolicy: Always
           name: svc
           ports:
             - containerPort: 3000
-          resources:
-            requests:
-              memory: "64Mi"
-              cpu: "250m"
-            limits:
-              memory: "128Mi"
-              cpu: "500m"
-          readinessProbe:
-            httpGet:
-              path: /health
-              port: 3000
-            initialDelaySeconds: 3
-            periodSeconds: 10
-          livenessProbe:
-            httpGet:
-              path: /health
-              port: 3000
-            initialDelaySeconds: 5
-            periodSeconds: 10
 ---
 kind: Service
 apiVersion: v1
@@ -51,9 +38,23 @@ metadata:
     app: customers
 spec:
   selector:
-    app: customers  # Matches all versions of customers
+    app: customers
   ports:
     - port: 80
       name: http
       targetPort: 3000
+---
+apiVersion: networking.istio.io/v1beta1
+kind: VirtualService
+metadata:
+  name: customers
+spec:
+  hosts:
+    - 'customers.default.svc.cluster.local'
+  http:
+    - route:
+        - destination:
+            host: customers.default.svc.cluster.local
+            port:
+              number: 80
 
